# ccastplayer

./: LICENSE  README.md  ccastplayer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
tests/: test_ccastplayer.py
